all po files updated from develop at 2019-11-30 07:51

--- a/po/de.po
+++ b/po/de.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-18 18:59+0100\n"
-"PO-Revision-Date: 2019-07-24 20:23+0200\n"
+"POT-Creation-Date: 2019-11-30 07:50+0100\n"
+"PO-Revision-Date: 2019-11-28 17:53+0100\n"
 "Last-Translator: Pike_Bishop <alfredzngr023@gmail.com>\n"
 "Language-Team: Sfteam  angelo2807@hotmail.com\n"
 "Language: de\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"X-Generator: Poedit 1.8.3\n"
+"X-Generator: Poedit 2.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 msgid ""
@@ -118,11 +118,11 @@ msgstr "%.0f kB"
 
 #, python-format
 msgid "%.1f°E"
-msgstr ""
+msgstr "%.1f°E"
 
 #, python-format
 msgid "%.1f°W"
-msgstr ""
+msgstr "%.1f°W"
 
 #, python-format
 msgid "%.2f GB"
@@ -701,6 +701,15 @@ msgstr "ATSC-Provider"
 msgid "Abort"
 msgstr "Abbrechen"
 
+msgid "Abort alternatives edit"
+msgstr "Alternativen-Bearbeitung abbrechen"
+
+msgid "Abort bouquet edit"
+msgstr "Bouqueteditieren abbrechen"
+
+msgid "Abort favourites edit"
+msgstr "Favoriteneditor abbrechen"
+
 msgid "About"
 msgstr "Über"
 
@@ -746,8 +755,17 @@ msgstr "DNS-Servereintrag hinzufügen"
 msgid "Add a new title"
 msgstr "Neuen Titel hinzufügen"
 
+msgid "Add alternatives"
+msgstr "Alternativen hinzufügen"
+
 msgid "Add bookmark"
 msgstr "Lesezeichen hinzufügen"
+
+msgid "Add bouquet"
+msgstr "Bouquet einfügen"
+
+msgid "Add bouquet to parental protection"
+msgstr "Bouquet zum Jugendschutz hinzufügen"
 
 msgid "Add directory to playlist"
 msgstr "Verzeichnis zur Wiedergabeliste hinzufügen"
@@ -757,6 +775,9 @@ msgstr "Datei zur Wiedergabeliste hinzufügen"
 
 msgid "Add files to playlist"
 msgstr "Dateien zur Wiedergabeliste hinzufügen"
+
+msgid "Add marker"
+msgstr "Marker einfügen"
 
 msgid "Add provider"
 msgstr "Anbieter hinzufügen"
@@ -776,9 +797,14 @@ msgstr "Aufnahme hinzufügen (aktuelle Sendung)"
 msgid "Add service"
 msgstr "Kanal hinzufügen"
 
-#, fuzzy
-msgid "Add services to this bouquet?"
+msgid "Add service to bouquet"
 msgstr "Zu Bouquet hinzufügen"
+
+msgid "Add service to favourites"
+msgstr "Kanal zu Favoriten hinzufügen"
+
+msgid "Add services to this bouquet?"
+msgstr "Zu Bouquet hinzufügen ?"
 
 msgid "Add timer"
 msgstr "Timer setzen"
@@ -791,6 +817,9 @@ msgstr "Zum Bouquet hinzufügen"
 
 msgid "Add to favourites"
 msgstr "Zu Favoriten hinzufügen"
+
+msgid "Add to parental protection"
+msgstr "Jugendschutz anschalten"
 
 msgid "Add/remove change timer for current event"
 msgstr "Timer für diese Sendung setzen/entfernen"
@@ -879,9 +908,8 @@ msgstr "Alle Satelliten 4 (USALS)"
 msgid "All services provider"
 msgstr "Alle Dienstleister"
 
-#, fuzzy
 msgid "All slots"
-msgstr "Slot auswählen"
+msgstr "Alle Slots"
 
 msgid "Allocate"
 msgstr "Zuweisen"
@@ -1003,9 +1031,8 @@ msgstr "Arabisch"
 msgid "Are you sure to purge all deleted user bouquets?"
 msgstr "Sind Sie sicher, alle gelöschten Userbouquets zu entfernen?"
 
-#, fuzzy
 msgid "Are you sure to reboot to"
-msgstr "Soll dieser Eintrag wirklich gelöscht werden?"
+msgstr "Sind Sie sicher neuzustarten zu"
 
 #, python-format
 msgid "Are you sure to remove all %d.%d%s%s services?"
@@ -1674,9 +1701,8 @@ msgstr "Kanäle"
 msgid "Channels and EPG"
 msgstr "Kanäle und EPG"
 
-#, fuzzy
 msgid "Channels only"
-msgstr "Kanäle"
+msgstr "Nur Kanäle"
 
 msgid "Chap."
 msgstr "Kap."
@@ -1854,15 +1880,15 @@ msgstr "Konfiguriere Suchdetails"
 msgid "Config resolution of pictures"
 msgstr "Auflösung von Bildern konfigurieren"
 
+msgid "Configuration"
+msgstr "Konfiguration"
+
 msgid "Configuration mode"
 msgstr "Konfigurationsmodus"
 
 #, python-format
 msgid "Configuration mode: %s"
 msgstr "Konfigurationsmodus: %s"
-
-msgid "Configuration"
-msgstr "Konfiguration"
 
 msgid "Configure ATSC"
 msgstr "Konfiguriere ATSC"
@@ -2257,6 +2283,9 @@ msgstr "Cookinseln"
 
 msgid "Copy"
 msgstr "Kopieren"
+
+msgid "Copy to bouquets"
+msgstr "In Bouquets kopieren"
 
 msgid "Costa Rica"
 msgstr "Costa Rica"
@@ -2719,6 +2748,9 @@ msgstr "Deaktivieren von Hintergrundscanning"
 msgid "Disable current event but not coming events"
 msgstr "Laufendes Ereignis abbrechen, aber kommende ausführen"
 
+msgid "Disable move mode"
+msgstr "Verschiebemodus ausschalten"
+
 msgid "Disable timer"
 msgstr "Timer deaktivieren"
 
@@ -2975,7 +3007,7 @@ msgid "EPG language selection 2"
 msgstr "EPG Sprachwahl 2"
 
 msgid "EPG only"
-msgstr ""
+msgstr "Nur EPG"
 
 msgid "EPG selection"
 msgstr "EPG-Auswahl"
@@ -3005,6 +3037,9 @@ msgstr "Bearbeiten"
 
 msgid "Edit DNS"
 msgstr "Bearbeite DNS"
+
+msgid "Edit alternatives"
+msgstr "Alternativen bearbeiten"
 
 msgid "Edit chapters of current title"
 msgstr "Kapitel des ausgewählten Titels schneiden"
@@ -3084,9 +3119,8 @@ msgstr "Aktiviere Vorschau mit 'OK' in der Kanalwahlliste"
 msgid "Enable OK for channel selection"
 msgstr "Aktiviere OK für Kanalauswahl"
 
-#, fuzzy
 msgid "Enable OpenTV EPG"
-msgstr "Aktiviere EIT EPG"
+msgstr "Aktiviere OpenTV EPG"
 
 msgid "Enable ViaSat EPG"
 msgstr "Aktiviere ViaSat EPG"
@@ -3104,17 +3138,26 @@ msgstr "Aktiviere automatischen schnellen Kanalscan"
 msgid "Enable auto fast scan for %s"
 msgstr "Aktiviere automatischen schnellen Kanalscan für %s"
 
+msgid "Enable bouquet edit"
+msgstr "Bouqueteditieren anschalten"
+
 msgid "Enable bouquet selection in multi-EPG"
 msgstr "Aktiviere die Bouquet-Auswahl im Multi-EPG."
 
 msgid "Enable fallback remote receiver"
 msgstr "Aktiviere Reserve-Receiver"
 
+msgid "Enable favourites edit"
+msgstr "Favoriteneditor anschalten"
+
 msgid "Enable freesat EPG"
 msgstr "Aktiviere Freesat EPG"
 
 msgid "Enable import timer from fallback tuner"
 msgstr "Aktivieren Sie den Import-Timer vom Reserve-Tuner"
+
+msgid "Enable move mode"
+msgstr "Verschiebemodus aktivieren"
 
 msgid "Enable multiple bouquets"
 msgstr "Mehrere Bouquets erlauben"
@@ -3166,6 +3209,15 @@ msgstr "Passwortverschlüsselungstyp"
 
 msgid "Encryption:"
 msgstr "Verschlüsselung:"
+
+msgid "End alternatives edit"
+msgstr "Alternativen-Bearbeitung beenden"
+
+msgid "End bouquet edit"
+msgstr "Bouqueteditieren beenden"
+
+msgid "End favourites edit"
+msgstr "Favoriteneditor beenden"
 
 msgid "End time"
 msgstr "Endzeit"
@@ -3410,9 +3462,6 @@ msgstr "Netzwerkassistent verlassen"
 msgid "Exit the wizard"
 msgstr "Assistent beenden"
 
-msgid "Exit/OK"
-msgstr "Beenden/OK"
-
 msgid "Expand"
 msgstr "Erweitern"
 
@@ -3580,9 +3629,8 @@ msgstr "Reserve-Receiver Einstellungen"
 msgid "Fallback tuner setup"
 msgstr "Reserve-Tuner-Einstellung"
 
-#, fuzzy
 msgid "False"
-msgstr "Nein"
+msgstr "Falsch"
 
 #, python-format
 msgid "Fan %d"
@@ -3643,6 +3691,9 @@ msgstr "Endposition auf Index"
 
 msgid "Final scroll delay"
 msgstr "Endscrollgeschwindigkeit"
+
+msgid "Find currently playing service"
+msgstr "Springe zum aktuellen Kanal"
 
 msgid "Fine movement"
 msgstr "Fein-Steuerung"
@@ -4161,7 +4212,7 @@ msgid "Icons"
 msgstr "Symbole"
 
 msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
-msgstr ""
+msgstr "Wenn deaktiviert, werden Unterstriche in Dateien und Verzeichnissen durch Leerzeichen ersetzt angezeigt."
 
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
 msgstr "Wenn aktiviert, dann wird das Lesezeichen mit Aufnahmeverzeichniss aktualisiert."
@@ -4237,7 +4288,6 @@ msgstr "Image: "
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
 msgstr "Importieren Sie Kanäle und / oder EPG von der Empfänger-URL des Empfängers, auch wenn der Receiver den Standby-Modus verlässt"
 
-#, fuzzy
 msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
 msgstr "Importiert die Kanäle und / oder den EPG der Receiver-URL des Remote-Receivers, beim Booten des Receivers."
 
@@ -5774,6 +5824,9 @@ msgstr "DVD abspielen"
 msgid "Play DVDs"
 msgstr "DVDs abspielen"
 
+msgid "Play as Picture in Picture"
+msgstr "Als Bild im Bild wiedergeben"
+
 msgid "Play audio-CD..."
 msgstr "Musik-CD abspielen…"
 
@@ -5791,6 +5844,9 @@ msgstr "Wiedergabe ab der nächsten Markierung/Listeneintrag"
 
 msgid "Play from previous mark or playlist entry"
 msgstr "Wiedergabe ab der letzten Markierung/Listeneintrag"
+
+msgid "Play in main window"
+msgstr "Als Hautpbild wiedergeben"
 
 msgid "Play music..."
 msgstr "Musik abspielen…"
@@ -6331,6 +6387,9 @@ msgstr "Anbieter"
 msgid "Puerto Rico"
 msgstr "Puerto Rico"
 
+msgid "Purge deleted user bouquets"
+msgstr "Gelöschte Userbouquets entfernen"
+
 msgid "Put TV in standby"
 msgstr "Fernseher in den Standby versetzen"
 
@@ -6341,7 +6400,7 @@ msgid "Python frontend for /tmp/mmi.socket"
 msgstr "Python frontend für /tmp/mmi.socket"
 
 msgid "Python version: "
-msgstr "Python Version: "
+msgstr "Python-Version: "
 
 msgid "Qatar"
 msgstr "Qatar"
@@ -6533,11 +6592,23 @@ msgstr "Markierung entfernen"
 msgid "Remove a nameserver entry"
 msgstr "DNS-Servereintrag entfernen"
 
+msgid "Remove all alternatives"
+msgstr "Entferne alle Alternativen"
+
 msgid "Remove all logfiles"
 msgstr "Alle Log-Dateien entfernen"
 
+msgid "Remove all new found flags"
+msgstr "Entfernen aller 'neu gefunden'-Kennzeichnungen"
+
 msgid "Remove bookmark"
 msgstr "Lesezeichen entfernen"
+
+msgid "Remove bouquet from parental protection"
+msgstr "Bouquet aus Jugendschutz entfernen"
+
+msgid "Remove cable services"
+msgstr "Kabel-Dienste entfernen"
 
 msgid "Remove completed timers after (days)"
 msgstr "Entferne abgeschlossene Timer nach (Tage)"
@@ -6548,11 +6619,26 @@ msgstr "Entferne aktuell ausgewählten Titel"
 msgid "Remove directory"
 msgstr "Verzeichnis entfernen"
 
+msgid "Remove entry"
+msgstr "Eintrag entfernen"
+
+msgid "Remove from parental protection"
+msgstr "Jugendschutz ausschalten"
+
 msgid "Remove items from trash can after (days)"
 msgstr "Entfernen aus Papierkorb nach (Tagen)"
 
+msgid "Remove new found flag"
+msgstr "Entfernen der 'neu gefunden'-Kennzeichnung"
+
 msgid "Remove plugins"
 msgstr "Plugins entfernen"
+
+msgid "Remove selected satellite"
+msgstr "Entferne gewählten Satellit"
+
+msgid "Remove terrestrial services"
+msgstr "Terrestrische-Dienste entfernen"
 
 msgid "Remove this logfile"
 msgstr "Diese Log-Datei entfernen"
@@ -6572,6 +6658,9 @@ msgstr "Partitionstabelle erneut einlesen"
 
 msgid "Rename"
 msgstr "Umbenennen"
+
+msgid "Rename entry"
+msgstr "Eintrag umbenennen"
 
 msgid "Rename name and description for new events"
 msgstr "Benennen Sie Name und Beschreibung für neue Ereignisse um"
@@ -6686,6 +6775,9 @@ msgstr "Zurückspielen"
 
 msgid "Restore backups"
 msgstr "Einstellungen wiederherstellen"
+
+msgid "Restore deleted user bouquets"
+msgstr "Gelöschte Userbouquets wiederherstellen"
 
 msgid "Restore system settings"
 msgstr "Einstellungen wiederherstellen"
@@ -7423,6 +7515,9 @@ msgstr "Service und PIDs"
 msgid "Service ID"
 msgstr "Dienst-ID"
 
+msgid "Service belongs to a parental protected bouquet"
+msgstr "Kanal ist in Jugendschutz-Bouquet"
+
 msgid "Service has been added to the favourites."
 msgstr "Kanal wurde zu Favoriten hinzugefügt."
 
@@ -7503,6 +7598,9 @@ msgstr "Alle Hotkeys auf standard setzen?"
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
 msgstr "Bestimme alternativen Reserve-Tuner für DVB-T / C oder ATSC"
+
+msgid "Set as startup service"
+msgstr "Als Anschalt-Kanal setzen"
 
 msgid "Set blocktimes by weekday"
 msgstr "Setze Blockzeiten nach Wochentag"
@@ -7653,6 +7751,9 @@ msgstr "VCR-SCART im Hauptmenü anzeigen"
 
 msgid "Show WLAN status"
 msgstr "WLAN-Status anzeigen"
+
+msgid "Show alternatives"
+msgstr "Alternativen anzeigen"
 
 msgid "Show animation while busy"
 msgstr "Animation bei Beschäftigung anzeigen"
@@ -7834,9 +7935,11 @@ msgstr "Radio-Wiedergabemodus…"
 msgid "Show the tv player..."
 msgstr "TV-Wiedergabemodus…"
 
-#, fuzzy
+msgid "Show transponder info"
+msgstr "Transponder-Info anzeigen"
+
 msgid "Show underline characters in filenames"
-msgstr "Reduzierter Zeichensatz für Aufnahme-Dateinamen"
+msgstr "Unterstriche anzeigen"
 
 msgid "Show vertical timelines"
 msgstr "vertikale Zeitachsen anzeigen"
@@ -8326,6 +8429,9 @@ msgstr "Timeshift beenden"
 
 msgid "Stop timeshift?"
 msgstr "Timeshift beenden?"
+
+msgid "Stop using as startup service"
+msgstr "Nicht mehr als Anschaltkanal nutzen"
 
 msgid "Stopped"
 msgstr "Gestoppt"
@@ -9211,7 +9317,7 @@ msgid "Troubleshoot"
 msgstr "Fehlersuche"
 
 msgid "True"
-msgstr ""
+msgstr "Richtig"
 
 msgid "Try to find used transponders in cable network.. please wait..."
 msgstr "Suche benutzte Transponder im Kabel Netzwerk.. bitte warten…"
@@ -9501,9 +9607,8 @@ msgstr "Verwende MHW EPG Information, wenn sie verfügbar ist."
 msgid "Use Netmed EPG information when it is available."
 msgstr "Verwende Netmed EPG Information, wenn sie verfügbar ist."
 
-#, fuzzy
 msgid "Use OpenTV EPG information when it is available."
-msgstr "Verwende EIT EPG Information, wenn sie verfügbar ist."
+msgstr "Verwende OpenTV EPG Information, wenn verfügbar."
 
 msgid "Use TV remote control"
 msgstr "Fernbedienungsbefehle des Fernsehers weiterleiten"
@@ -10534,48 +10639,17 @@ msgstr "Eine Benutzeroberfläche, um einem Common Interface Kanäle/Anbieter zuz
 msgid "a gui to assign services/providers/caids to common interface modules"
 msgstr "Eine Benutzeroberfläche, um einem Common Interface Kanäle/Anbieter/CAIDs zuzuweisen."
 
-msgid "Abort alternatives edit"
-msgstr "Alternativen-Bearbeitung abbrechen"
-
-msgid "Abort bouquet edit"
-msgstr "Bouqueteditieren abbrechen"
-
-msgid "Abort favourites edit"
-msgstr "Favoriteneditor abbrechen"
-
 msgid "about to start"
 msgstr "Startet gleich"
 
 msgid "activate network adapter configuration"
 msgstr "Netzwerkverbindung aktivieren"
 
-#, fuzzy
 msgid "active"
-msgstr "Relativ"
+msgstr "Aktiv"
 
 msgid "actual time only"
 msgstr "tatsächliche Zeit nur"
-
-msgid "Add alternatives"
-msgstr "Alternativen hinzufügen"
-
-msgid "Add bouquet"
-msgstr "Bouquet einfügen"
-
-msgid "Add bouquet to parental protection"
-msgstr "Bouquet zum Jugendschutz hinzufügen"
-
-msgid "Add marker"
-msgstr "Marker einfügen"
-
-msgid "Add service to bouquet"
-msgstr "Zu Bouquet hinzufügen"
-
-msgid "Add service to favourites"
-msgstr "Kanal zu Favoriten hinzufügen"
-
-msgid "Add to parental protection"
-msgstr "Jugendschutz anschalten"
 
 msgid "adult movie/drama"
 msgstr "Erwachsenenfilm/Drama"
@@ -10730,9 +10804,6 @@ msgstr "gesteuert von HDMI"
 msgid "cooking"
 msgstr "Kochen"
 
-msgid "Copy to bouquets"
-msgstr "In Bouquets kopieren"
-
 msgid "daily"
 msgstr "Täglich"
 
@@ -10755,10 +10826,7 @@ msgid "disable"
 msgstr "Deaktivieren"
 
 msgid "disable intro screen"
-msgstr "deaktiviere Introbild"
-
-msgid "Disable move mode"
-msgstr "Verschiebemodus ausschalten"
+msgstr "Deaktiviere Introbild"
 
 msgid "disabled"
 msgstr "Deaktiviert"
@@ -10787,9 +10855,6 @@ msgstr "Osten"
 msgid "economics/social advisory"
 msgstr "Wirtschaft/Soziale Ratgeber"
 
-msgid "Edit alternatives"
-msgstr "Alternativen bearbeiten"
-
 msgid "education/science/factual topics (general)"
 msgstr "Bildung/Wissenschaft/Sachbezogene Themen (Allgemein)"
 
@@ -10802,32 +10867,14 @@ msgstr "Leer"
 msgid "enable"
 msgstr "Aktivieren"
 
-msgid "Enable bouquet edit"
-msgstr "Bouqueteditieren anschalten"
-
-msgid "Enable favourites edit"
-msgstr "Favoriteneditor anschalten"
-
 msgid "enable intro screen"
 msgstr "aktiviere Introbild"
-
-msgid "Enable move mode"
-msgstr "Verschiebemodus aktivieren"
 
 msgid "enabled"
 msgstr "Aktiviert"
 
-msgid "End alternatives edit"
-msgstr "Alternativen-Bearbeitung beenden"
-
-msgid "End bouquet edit"
-msgstr "Bouqueteditieren beenden"
-
 msgid "end cut here"
 msgstr "Schnitt endet hier"
-
-msgid "End favourites edit"
-msgstr "Favoriteneditor beenden"
 
 msgid "entertainment (10-16 year old)"
 msgstr "Unterhaltung (10-16 Jahre)"
@@ -10897,9 +10944,6 @@ msgstr "Dateiname"
 
 msgid "film/cinema"
 msgstr "Film/Kino"
-
-msgid "Find currently playing service"
-msgstr "Springe zum aktuellen Kanal"
 
 msgid "fine arts"
 msgstr "Kunstwissenschaft"
@@ -11225,12 +11269,6 @@ msgstr "pausiert"
 msgid "performing arts"
 msgstr "Darstellende Künste"
 
-msgid "Play as Picture in Picture"
-msgstr "Als Bild im Bild wiedergeben"
-
-msgid "Play in main window"
-msgstr "Als Hautpbild wiedergeben"
-
 msgid "please press OK when ready"
 msgstr "Bitte OK drücken, wenn bereit"
 
@@ -11242,9 +11280,6 @@ msgstr "Beliebte Kultur/Traditionelle Kunst"
 
 msgid "pre-school children's program"
 msgstr "Vorschul Kinderprogramm"
-
-msgid "Purge deleted user bouquets"
-msgstr "Gelöschte Userbouquets entfernen"
 
 msgid "receiver software because updates are available."
 msgstr "Receiver Software, weil Updates verfügbar sind."
@@ -11267,50 +11302,17 @@ msgstr "Außergewöhnliche Menschen"
 msgid "remove after this position"
 msgstr "Nach dieser Position entfernen"
 
-msgid "Remove all alternatives"
-msgstr "Entferne alle Alternativen"
-
-msgid "Remove all new found flags"
-msgstr "Entfernen aller 'neu gefunden'-Kennzeichnungen"
-
 msgid "remove before this position"
 msgstr "Vor dieser Position entfernen"
 
-msgid "Remove bouquet from parental protection"
-msgstr "Bouquet aus Jugendschutz entfernen"
-
-msgid "Remove cable services"
-msgstr "Kabel-Dienste entfernen"
-
-msgid "Remove entry"
-msgstr "Eintrag entfernen"
-
-msgid "Remove from parental protection"
-msgstr "Jugendschutz ausschalten"
-
-msgid "Remove new found flag"
-msgstr "Entfernen der 'neu gefunden'-Kennzeichnung"
-
-msgid "Remove selected satellite"
-msgstr "Entferne gewählten Satellit"
-
-msgid "Remove terrestrial services"
-msgstr "Terrestrische-Dienste entfernen"
-
 msgid "remove this mark"
 msgstr "Diese Markierung entfernen"
-
-msgid "Rename entry"
-msgstr "Eintrag umbenennen"
 
 msgid "repeated"
 msgstr "Wiederholend"
 
 msgid "reserved for future use"
 msgstr "Reserviert für zukünftige Verwendung"
-
-msgid "Restore deleted user bouquets"
-msgstr "Gelöschte Userbouquets wiederherstellen"
 
 msgid "reverse by date"
 msgstr "Umgekehrt nach Datum"
@@ -11357,23 +11359,14 @@ msgstr "Ernste Musik/Klassische Musik"
 msgid "serious/classical/religious/historical movie/drama"
 msgstr "Ernst/Klassisch/Religiös/Historischer Film/Drama"
 
-msgid "Service belongs to a parental protected bouquet"
-msgstr "Kanal ist in Jugendschutz-Bouquet"
-
 msgid "service off-air"
 msgstr "Service außerhalb der Luft"
-
-msgid "Set as startup service"
-msgstr "Als Anschalt-Kanal setzen"
 
 msgid "show DVD main menu"
 msgstr "Das DVD Hauptmenü anzeigen"
 
 msgid "show all tags"
 msgstr "Alle Tags anzeigen"
-
-msgid "Show alternatives"
-msgstr "Alternativen anzeigen"
 
 msgid "show event details"
 msgstr "Sendungs-Details anzeigen"
@@ -11383,9 +11376,6 @@ msgstr "Softwaremanager unter Einstellungen anzeigen"
 
 msgid "show softwaremanager on blue button"
 msgstr "Softwaremanager auf blauer Taste anzeigen"
-
-msgid "Show transponder info"
-msgstr "Transponder-Info anzeigen"
 
 msgid "show/game show (general)"
 msgstr "Show/Spielsendung (Allgemein)"
@@ -11480,9 +11470,6 @@ msgstr "Schrittgröße"
 
 msgid "stereo"
 msgstr "Stereo"
-
-msgid "Stop using as startup service"
-msgstr "Nicht mehr als Anschaltkanal nutzen"
 
 msgid "successful"
 msgstr "erfolgreich"
@@ -11647,7 +11634,7 @@ msgid "yes (keep feeds)"
 msgstr "Ja (Feeds behalten)"
 
 msgid "yes, but not in multi selections"
-msgstr ""
+msgstr "Ja, aber nicht in der Mehrfachauswahl"
 
 msgid "zap"
 msgstr "Umschalten"
