--- a/po/lt.po
+++ b/po/lt.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-11-18 19:05+0100\n"
-"PO-Revision-Date: 2019-11-18 21:02+0200\n"
+"POT-Creation-Date: 2019-11-30 07:50+0100\n"
+"PO-Revision-Date: 2019-11-28 20:02+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
 "Language: lt_LT\n"
@@ -712,6 +712,15 @@ msgstr "ATSC tiekėjas"
 msgid "Abort"
 msgstr "Nutraukti"
 
+msgid "Abort alternatives edit"
+msgstr "Nutraukti alternatyvų redagavimą"
+
+msgid "Abort bouquet edit"
+msgstr "Nutraukti paketo redagavimą"
+
+msgid "Abort favourites edit"
+msgstr "Nutraukti mėgstamų redagavimą"
+
 msgid "About"
 msgstr "Apie"
 
@@ -757,11 +766,17 @@ msgstr "Pridėti serverio pavadinimo įėjimą"
 msgid "Add a new title"
 msgstr "Pridėti naują pavadinimą"
 
+msgid "Add alternatives"
+msgstr "Pridėti alternatyvas"
+
 msgid "Add bookmark"
 msgstr "Pridėti žymę"
 
 msgid "Add bouquet"
 msgstr "Pridėti paketą"
+
+msgid "Add bouquet to parental protection"
+msgstr "Pridėti paketą į tėvų kontrolę"
 
 msgid "Add directory to playlist"
 msgstr "Pridėti katalogą į grojaraštį"
@@ -771,6 +786,9 @@ msgstr "Pridėti failą į grojaraštį"
 
 msgid "Add files to playlist"
 msgstr "Pridėti failus į grojaraštį"
+
+msgid "Add marker"
+msgstr "Pridėti žymeklį"
 
 msgid "Add provider"
 msgstr "Pridėti tiekėją"
@@ -790,6 +808,12 @@ msgstr "Pradėti įrašymą (nutraukti po šio įvykio)"
 msgid "Add service"
 msgstr "Pridėti kanalą"
 
+msgid "Add service to bouquet"
+msgstr "Pridėti kanalą į paketą"
+
+msgid "Add service to favourites"
+msgstr "Pridėti kanalą į mėgstamus"
+
 msgid "Add services to this bouquet?"
 msgstr "Pridėti kanalus prie šio paketo?"
 
@@ -804,6 +828,9 @@ msgstr "Pridėti į paketą"
 
 msgid "Add to favourites"
 msgstr "Pridėti į mėgstamus"
+
+msgid "Add to parental protection"
+msgstr "Pridėti į tėvų kontrolę"
 
 msgid "Add/remove change timer for current event"
 msgstr "Pridėti, pašalinti, pakeisti šio įvykio laikmatį"
@@ -1473,7 +1500,7 @@ msgid "C-Band"
 msgstr "C-juosta"
 
 msgid "CH"
-msgstr "KAN."
+msgstr "KAN"
 
 #, python-format
 msgid "CH%s"
@@ -1865,15 +1892,15 @@ msgstr "Išsamus paieškos nustatymas"
 msgid "Config resolution of pictures"
 msgstr "Nustatykite paveikslėlių rezoliuciją"
 
+msgid "Configuration"
+msgstr "Konfigūracija"
+
 msgid "Configuration mode"
 msgstr "Konfigūravimo būdas"
 
 #, python-format
 msgid "Configuration mode: %s"
 msgstr "Konfigūravimo būdas: %s"
-
-msgid "Configuration"
-msgstr "Konfigūracija"
 
 msgid "Configure ATSC"
 msgstr "ATSC konfigūravimas"
@@ -2264,6 +2291,9 @@ msgstr "Kuko salos"
 
 msgid "Copy"
 msgstr "Kopijuoti"
+
+msgid "Copy to bouquets"
+msgstr "Kopijuoti į paketus"
 
 msgid "Costa Rica"
 msgstr "Kosta Rika"
@@ -2726,6 +2756,9 @@ msgstr "Išjungti foninį skenavimą"
 msgid "Disable current event but not coming events"
 msgstr "Išjungti dabartinį įvykį, bet ne po jo einančius"
 
+msgid "Disable move mode"
+msgstr "Išjungti perkėlimą"
+
 msgid "Disable timer"
 msgstr "Išjungti laikmatį"
 
@@ -3020,6 +3053,9 @@ msgstr "Redaguoti"
 msgid "Edit DNS"
 msgstr "Redaguoti DNS"
 
+msgid "Edit alternatives"
+msgstr "Redaguoti alternatyvas"
+
 msgid "Edit chapters of current title"
 msgstr "Redaguoti šio pavadinimo skyrius"
 
@@ -3117,17 +3153,26 @@ msgstr "Įjungti automatinę sparčią paiešką"
 msgid "Enable auto fast scan for %s"
 msgstr "Įjungti automatinę sparčią paiešką %s"
 
+msgid "Enable bouquet edit"
+msgstr "Įjungti paketų redagavimą"
+
 msgid "Enable bouquet selection in multi-EPG"
 msgstr "Įjungti paketų pasirinkimą multi-EPG režime"
 
 msgid "Enable fallback remote receiver"
 msgstr "Įjungti atsarginį nuotolinį imtuvą"
 
+msgid "Enable favourites edit"
+msgstr "Įjungti mėgstamų redagavimą"
+
 msgid "Enable freesat EPG"
 msgstr "Įjungti nekoduojamų kanalų EPG"
 
 msgid "Enable import timer from fallback tuner"
 msgstr "Įjungti importo laikmatį iš atsarginio imtuvo"
+
+msgid "Enable move mode"
+msgstr "Įjungti perkėlimą"
 
 msgid "Enable multiple bouquets"
 msgstr "Leisti dubliuoti kanalus keliuose paketuose"
@@ -3176,6 +3221,15 @@ msgstr "Kodavimo rakto tipas"
 
 msgid "Encryption:"
 msgstr "Kodavimas:"
+
+msgid "End alternatives edit"
+msgstr "Alternatyvų redagavimo pabaiga"
+
+msgid "End bouquet edit"
+msgstr "Baigti paketų redagavimą"
+
+msgid "End favourites edit"
+msgstr "Baigti mėgstamų redagavimą"
 
 msgid "End time"
 msgstr "Pabaigos laikas"
@@ -3420,9 +3474,6 @@ msgstr "Užverti tinklo vedlį"
 msgid "Exit the wizard"
 msgstr "Užverti nustatymų vedlį"
 
-msgid "Exit/OK"
-msgstr "Užverti/OK"
-
 msgid "Expand"
 msgstr "Išskleisti"
 
@@ -3648,6 +3699,9 @@ msgstr "Galutinė pozicija ties žyme"
 
 msgid "Final scroll delay"
 msgstr "Galutinė slinkties delsa"
+
+msgid "Find currently playing service"
+msgstr "Rasti šiuo metu rodomą kanalą"
 
 msgid "Fine movement"
 msgstr "Tikslus judėjimas"
@@ -5778,6 +5832,9 @@ msgstr "Žiūrėti DVD"
 msgid "Play DVDs"
 msgstr "Žiūrėti DVD"
 
+msgid "Play as Picture in Picture"
+msgstr "Žiūrėti kaip paveikslėlį paveikslėlyje"
+
 msgid "Play audio-CD..."
 msgstr "Groti garso-CD..."
 
@@ -5795,6 +5852,9 @@ msgstr "Paleisti nuo kito žymeklio arba grojaraščio užduoties"
 
 msgid "Play from previous mark or playlist entry"
 msgstr "Paleisti nuo ankstesnio žymeklio arba grojaraščio užduoties"
+
+msgid "Play in main window"
+msgstr "Atkurti pagrindiniame lange"
 
 msgid "Play music..."
 msgstr "Paleisti muziką..."
@@ -6334,6 +6394,9 @@ msgstr "Tiekėjai"
 msgid "Puerto Rico"
 msgstr "Puerto Rikas"
 
+msgid "Purge deleted user bouquets"
+msgstr "Išvalyti ištrintus vartotojo paketus"
+
 msgid "Put TV in standby"
 msgstr "Perjungti TV į budėjimo režimą"
 
@@ -6535,11 +6598,23 @@ msgstr "Pašalinti žymeklį"
 msgid "Remove a nameserver entry"
 msgstr "Pašalinti serverio pavadinimo įrašą"
 
+msgid "Remove all alternatives"
+msgstr "Pašalinti visas alternatyvas"
+
 msgid "Remove all logfiles"
 msgstr "Pašalinti visus žurnalų failus"
 
+msgid "Remove all new found flags"
+msgstr "Pašalinti visus žymeklius 'nauji'"
+
 msgid "Remove bookmark"
 msgstr "Pašalinti žymę"
+
+msgid "Remove bouquet from parental protection"
+msgstr "Pašalinti paketą iš tėvų kontrolės"
+
+msgid "Remove cable services"
+msgstr "Pašalinti kabelinius kanalus"
 
 msgid "Remove completed timers after (days)"
 msgstr "Pašalinti užbaigtus laikmačius po (dienų)"
@@ -6550,11 +6625,26 @@ msgstr "Pašalinti dabar pasirinktą pavadinimą"
 msgid "Remove directory"
 msgstr "Pašalinti katalogą"
 
+msgid "Remove entry"
+msgstr "Pašalinti įrašą"
+
+msgid "Remove from parental protection"
+msgstr "Pašalinti iš tėvų kontrolės"
+
 msgid "Remove items from trash can after (days)"
 msgstr "Pašalinti elementus iš šiukšlinės po (dienų)"
 
+msgid "Remove new found flag"
+msgstr "Pašalinti žymeklį 'nauji'"
+
 msgid "Remove plugins"
 msgstr "Pašalinti priedus"
+
+msgid "Remove selected satellite"
+msgstr "Pašalinti pasirinktą palydovą"
+
+msgid "Remove terrestrial services"
+msgstr "Pašalinti antžeminius kanalus"
 
 msgid "Remove this logfile"
 msgstr "Pašalinti šį žurnalo failą"
@@ -6574,6 +6664,9 @@ msgstr "Pašalinama skaidinių lentelė"
 
 msgid "Rename"
 msgstr "Pervadinti"
+
+msgid "Rename entry"
+msgstr "Pervadinti įrašą"
 
 msgid "Rename name and description for new events"
 msgstr "Naujų įvykių pervardijimo pavadinimas ir apibūdinimas"
@@ -6686,6 +6779,9 @@ msgstr "Atkurti"
 
 msgid "Restore backups"
 msgstr "Atkurti atsargines kopijas"
+
+msgid "Restore deleted user bouquets"
+msgstr "Atkurti ištrintus vartotojo paketus"
 
 msgid "Restore system settings"
 msgstr "Atkurti sistemos nustatymus"
@@ -7426,6 +7522,9 @@ msgstr "Kanalai ir PIDs"
 msgid "Service ID"
 msgstr "Kanalo ID"
 
+msgid "Service belongs to a parental protected bouquet"
+msgstr "Šis paketas apsaugotas tėvų kontrolės"
+
 msgid "Service has been added to the favourites."
 msgstr "Kanalas įtrauktas į mėgstamus."
 
@@ -7506,6 +7605,9 @@ msgstr "Perjungti greitųjų klavišų reikšmes į numatytąsias?"
 
 msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
 msgstr "Nustatykite alternatyvius DVB-T/C arba ATSC atsarginius imtuvus"
+
+msgid "Set as startup service"
+msgstr "Nustatyti kaip pradinį kanalą"
 
 msgid "Set blocktimes by weekday"
 msgstr "Nustatykite blokavimo kartus pagal savaitės dieną"
@@ -7658,6 +7760,9 @@ msgstr "Rodyti VCR SCART pagrindiniame meniu"
 
 msgid "Show WLAN status"
 msgstr "Rodyti belaidžio tinklo būseną"
+
+msgid "Show alternatives"
+msgstr "Rodyti alternatyvas"
 
 msgid "Show animation while busy"
 msgstr "Rodyti animaciją tuo metu, kai užimta"
@@ -7838,6 +7943,9 @@ msgstr "Rodyti radijo grotuvą..."
 
 msgid "Show the tv player..."
 msgstr "Rodyti TV grotuvą..."
+
+msgid "Show transponder info"
+msgstr "Rodyti transponderio informaciją"
 
 msgid "Show underline characters in filenames"
 msgstr "Rodyti failų pavadinimų pabraukimo simbolius"
@@ -8327,6 +8435,9 @@ msgstr "Sustabdyti laiko poslinkį"
 msgid "Stop timeshift?"
 msgstr "Sustabdyti laiko poslinkį?"
 
+msgid "Stop using as startup service"
+msgstr "Nustoti naudoti kaip pradinį kanalą"
+
 msgid "Stopped"
 msgstr "Sustabdyta"
 
@@ -8538,7 +8649,7 @@ msgstr "T2MI RAW režimas"
 msgid "TRANSLATOR_INFO"
 msgstr ""
 "P&C Adga, adga45@gmail.com\n"
-"Pasvalys, 2019-11-18 versija"
+"Pasvalys, 2019-11-28 versija"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "TS failas per didelis 1 lygio ISO9660!"
@@ -10528,15 +10639,6 @@ msgstr "kad priskirti kanalus/tiekėjus bendriems įstatomiems moduliams"
 msgid "a gui to assign services/providers/caids to common interface modules"
 msgstr "kad priskirti kanalus/tiekėjus/caids bendriems įstatomiems moduliams"
 
-msgid "Abort alternatives edit"
-msgstr "Nutraukti alternatyvų redagavimą"
-
-msgid "Abort bouquet edit"
-msgstr "Nutraukti paketo redagavimą"
-
-msgid "Abort favourites edit"
-msgstr "Nutraukti mėgstamų redagavimą"
-
 msgid "about to start"
 msgstr "apie pradžią"
 
@@ -10548,24 +10650,6 @@ msgstr "aktyvus"
 
 msgid "actual time only"
 msgstr "tik realus laikas"
-
-msgid "Add alternatives"
-msgstr "Pridėti alternatyvas"
-
-msgid "Add bouquet to parental protection"
-msgstr "Pridėti paketą į tėvų apsaugą"
-
-msgid "Add marker"
-msgstr "Pridėti žymeklį"
-
-msgid "Add service to bouquet"
-msgstr "Įtraukti kanalą į paketą"
-
-msgid "Add service to favourites"
-msgstr "Įtraukti kanalą į mėgstamus"
-
-msgid "Add to parental protection"
-msgstr "Įjungti tėvų kontrolę"
 
 msgid "adult movie/drama"
 msgstr "filmas suaugusiems, drama"
@@ -10718,9 +10802,6 @@ msgstr "kontroliuojama HDMI"
 msgid "cooking"
 msgstr "valgio gaminimas"
 
-msgid "Copy to bouquets"
-msgstr "Kopijuoti į paketus"
-
 msgid "daily"
 msgstr "kasdien"
 
@@ -10744,9 +10825,6 @@ msgstr "išjungti"
 
 msgid "disable intro screen"
 msgstr "išjungti įvadinį vaizdą"
-
-msgid "Disable move mode"
-msgstr "Išjungti perkėlimą"
 
 msgid "disabled"
 msgstr "išjungtas"
@@ -10775,9 +10853,6 @@ msgstr "rytai"
 msgid "economics/social advisory"
 msgstr "ekonomika, socialiniai mokslai"
 
-msgid "Edit alternatives"
-msgstr "Redaguoti alternatyvas"
-
 msgid "education/science/factual topics (general)"
 msgstr "švietimas, mokslas, faktai (bendra)"
 
@@ -10790,32 +10865,14 @@ msgstr "tuščias"
 msgid "enable"
 msgstr "įjungti"
 
-msgid "Enable bouquet edit"
-msgstr "Redaguoti paketą"
-
-msgid "Enable favourites edit"
-msgstr "Įjungti mėgstamiausių redagavimą"
-
 msgid "enable intro screen"
 msgstr "įjungti įvadinį vaizdą"
-
-msgid "Enable move mode"
-msgstr "Įjungti perkėlimą"
 
 msgid "enabled"
 msgstr "įjungtas"
 
-msgid "End alternatives edit"
-msgstr "Baigti alternatyvų redagavimą"
-
-msgid "End bouquet edit"
-msgstr "Baigti paketo redagavimą"
-
 msgid "end cut here"
 msgstr "iškirpimo pabaiga"
-
-msgid "End favourites edit"
-msgstr "Baigti mėgstamų redagavimą"
 
 msgid "entertainment (10-16 year old)"
 msgstr "pramogos (10-16 metų vaikams)"
@@ -10885,9 +10942,6 @@ msgstr "failo pavadinimas"
 
 msgid "film/cinema"
 msgstr "filmas, kinas"
-
-msgid "Find currently playing service"
-msgstr "Rasti šiuo metu rodomą kanalą"
 
 msgid "fine arts"
 msgstr "vaizduojamasis menas"
@@ -11213,12 +11267,6 @@ msgstr "pristabdymas"
 msgid "performing arts"
 msgstr "scenos menas"
 
-msgid "Play as Picture in Picture"
-msgstr "Rodyti vaizdą vaizde"
-
-msgid "Play in main window"
-msgstr "Rodyti pagrindiniame lange"
-
 msgid "please press OK when ready"
 msgstr "kai būsite pasiruošę, spauskite OK"
 
@@ -11230,9 +11278,6 @@ msgstr "populiarioji kultūra/tradiciniai menai"
 
 msgid "pre-school children's program"
 msgstr "ikimokyklinė vaikų programa"
-
-msgid "Purge deleted user bouquets"
-msgstr "Išvalyti ištrintus paketus"
 
 msgid "receiver software because updates are available."
 msgstr "imtuvo programinė įranga, nes galimi atnaujinimai."
@@ -11255,50 +11300,17 @@ msgstr "įžymybės"
 msgid "remove after this position"
 msgstr "pašalinti po šios pozicijos"
 
-msgid "Remove all alternatives"
-msgstr "Pašalinti visas alternatyvas"
-
-msgid "Remove all new found flags"
-msgstr "Pašalinti visus naujai rastus žymeklius"
-
 msgid "remove before this position"
 msgstr "pašalinti iki šios pozicijos"
 
-msgid "Remove bouquet from parental protection"
-msgstr "Pašalinti paketą iš tėvų kontrolės"
-
-msgid "Remove cable services"
-msgstr "Pašalinti kabelinius kanalus"
-
-msgid "Remove entry"
-msgstr "Pašalinti"
-
-msgid "Remove from parental protection"
-msgstr "Išjungti tėvų kontrolę"
-
-msgid "Remove new found flag"
-msgstr "Pašalinti naujai rastą žymeklį"
-
-msgid "Remove selected satellite"
-msgstr "Pašalinti pasirinktą palydovą"
-
-msgid "Remove terrestrial services"
-msgstr "Pašalinti antžeminius kanalus"
-
 msgid "remove this mark"
 msgstr "pašalinti šią žymę"
-
-msgid "Rename entry"
-msgstr "Pervadinti"
 
 msgid "repeated"
 msgstr "pakartotinis"
 
 msgid "reserved for future use"
 msgstr "skirta naudoti ateityje"
-
-msgid "Restore deleted user bouquets"
-msgstr "Atkurti ištrintus vartotojo paketus"
 
 msgid "reverse by date"
 msgstr "sukeisti pagal datą"
@@ -11345,23 +11357,14 @@ msgstr "rimta muzika/klasikinė muzika"
 msgid "serious/classical/religious/historical movie/drama"
 msgstr "rimtas/klasikinis/religinis/istorinis filmas/drama"
 
-msgid "Service belongs to a parental protected bouquet"
-msgstr "Kanalas yra tėvų kontrolės pakete"
-
 msgid "service off-air"
 msgstr "kanalas ne eteryje"
-
-msgid "Set as startup service"
-msgstr "Naudoti kaip paleisties kanalą"
 
 msgid "show DVD main menu"
 msgstr "rodyti pagrindinį DVD meniu"
 
 msgid "show all tags"
 msgstr "rodyti visas žymas"
-
-msgid "Show alternatives"
-msgstr "Rodyti alternatyvas"
 
 msgid "show event details"
 msgstr "rodyti įvykio detales"
@@ -11371,9 +11374,6 @@ msgstr "programinės įrangos tvarkyklę rodyti tarp nustatymų meniu"
 
 msgid "show softwaremanager on blue button"
 msgstr "rodyti programinės įrangos tvarkyklę mėlynu mygtuku"
-
-msgid "Show transponder info"
-msgstr "Rodyti transponderio informaciją"
 
 msgid "show/game show (general)"
 msgstr "šou, žaidimų šou (bendrai)"
@@ -11468,9 +11468,6 @@ msgstr "žingsnio dydis"
 
 msgid "stereo"
 msgstr "stereo"
-
-msgid "Stop using as startup service"
-msgstr "Nustoti naudoti kaip paleisties kanalą"
 
 msgid "successful"
 msgstr "sėkmingai"
