--- a/po/nl.po
+++ b/po/nl.po
@@ -4400,7 +4400,7 @@ msgid "Icons"
 msgstr "Iconen"
 
 msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
-msgstr "Indien gedéactiveerd, dan worden onderstreepte tekens in bestandsnamen of namen van mappen niet weergegeven en vervangen door spaties."
+msgstr "Indien niet geactiveerd, dan worden onderstreepte tekens in bestandsnamen of namen vervangen door spaties."
 
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
 msgstr "Indien geactiveerd dan zullen de markeringen ook geactualiseerd worden in de nieuwe locatie na verplaatsen of kopiëren van een opname."
@@ -8169,7 +8169,7 @@ msgid "Show transponder info"
 msgstr "Geef de transponderinfo weer"
 
 msgid "Show underline characters in filenames"
-msgstr "Toon de onderstreepte tekens in bestandsnamen"
+msgstr "Toon de onderstreepte tekens in bestands- en mapnamen"
 
 msgid "Show vertical timelines"
 msgstr "Toon de verticale tijdlijnen"
