update hungarian translation

--- a/po/hu.po
+++ b/po/hu.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-11-30 07:47+0100\n"
-"PO-Revision-Date: 2019-10-18 10:40+0200\n"
+"PO-Revision-Date: 2019-12-02 21:50+0100\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
 "Language: hu_HU\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.1\n"
+"X-Generator: Poedit 2.2.4\n"
 
 msgid ""
 "\n"
@@ -801,9 +801,8 @@ msgstr "Csatorna hozzáadása egy listához"
 msgid "Add service to favourites"
 msgstr "Csatorna hozzáadása a kedvencekhez"
 
-#, fuzzy
 msgid "Add services to this bouquet?"
-msgstr "csatorna hozzáadása egy listához"
+msgstr "Hozzáadja a csatornát ehhez a bouquet-hez?"
 
 msgid "Add timer"
 msgstr "Időzítés"
@@ -1701,9 +1700,8 @@ msgstr "Csatornák"
 msgid "Channels and EPG"
 msgstr "Csatornák és EPG"
 
-#, fuzzy
 msgid "Channels only"
-msgstr "Csatornák"
+msgstr "Csak csatornák"
 
 msgid "Chap."
 msgstr "Fej."
@@ -3006,7 +3004,7 @@ msgid "EPG language selection 2"
 msgstr "EPG nyelvválasztás 2."
 
 msgid "EPG only"
-msgstr ""
+msgstr "Csak EPG"
 
 msgid "EPG selection"
 msgstr "Elektronikus műsorújság"
@@ -4204,7 +4202,7 @@ msgid "Icons"
 msgstr "Ikonok"
 
 msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
-msgstr ""
+msgstr "Ha nem engedélyezi ezt a beállítást, akkor a fájlok és könyvtárak neveiben lévő aláhúzott karakterek szóközzel helyettesítődnek."
 
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
 msgstr "Ha engedélyezi, a könyvjelzők az új hely szerint lesznek frissítve amennyiben áthelyez vagy átmásol egy felvételt."
@@ -4282,7 +4280,6 @@ msgstr "Image: "
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
 msgstr "A csatornák és/vagy az EPG importálása a távoli vevő URL címéből a készülék felébredésekor"
 
-#, fuzzy
 msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
 msgstr "A csatornák és/vagy az EPG importálása a távoli vevő URL címéből a készülék bekapcsolásakor"
 
@@ -7928,9 +7925,8 @@ msgstr "TV csatorna lista..."
 msgid "Show transponder info"
 msgstr "Transzponder infó megjelenítése"
 
-#, fuzzy
 msgid "Show underline characters in filenames"
-msgstr "Korlátozott betűkészlet a felvételek fájlneveiben"
+msgstr "Aláhúzott karakterek mutatása a fájlnevekben"
 
 msgid "Show vertical timelines"
 msgstr "Függőleges idővonalak megjelenítése"
@@ -8632,7 +8628,7 @@ msgid "TRANSLATOR_INFO"
 msgstr ""
 "A fordítást készítette:\n"
 "mcfly82 & wysless\n"
-"Utolsó fordítás időpontja: 2019.10.18.\n"
+"Utolsó fordítás időpontja: 2019.12.01.\n"
 "Eredeti fordítás: MediaVox-Team, Robertut\n"
 "A magyar fordítás az OpenPLi projekthez készült.\n"
 "További információ: http://openpli.org"
@@ -10627,9 +10623,8 @@ msgstr "az indításról"
 msgid "activate network adapter configuration"
 msgstr "hálózati adapter konfiguráció aktiválása"
 
-#, fuzzy
 msgid "active"
-msgstr "Relatív"
+msgstr "aktív"
 
 msgid "actual time only"
 msgstr "csak az aktuális időt"
